# OverloadedBeaver

./: .gitignore  CMakeLists.txt  README.md  ResultMinder.cpp  ResultMinder.h  TM.cpp  TMSim.cpp  TM_combinations.py  best_1s.txt  best_alt.txt  best_any.txt  best_steps.txt  brute_b.cpp  brute_nb.cpp  c.txt  run.cpp  sim_tm.cpp  test1.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in
data/: REMOVE_unknown_b_TMs.txt  graph_nb.csv  search.txt  search_nb.txt  t_b_TMs.txt  t_nb_TMs.txt  unknown_b_TMs.txt
generate_tms/: all_b_tms.py  all_nb_tms.py  gen_tms.py  remove_dual_tms.py  remove_some_b_tms.py  remove_some_nb_tms.py
